search history button works

--- a/index.html
+++ b/index.html
@@ -43,12 +43,12 @@
 
         <section class="col">
             <div id="today" class="card">
-                <h2 id="city">City</h2>
+                <h2 id="city"></h2>
                 <h4 id="date"></h4>
-                <p>Temp: <span id="temp"></span></p>
-                <p>Wind: <span id="wind"></span></p>
-                <p>Humidity: <span id="humidity"></span></p>
-                <p>UV Index: <span id="uv-index"></span></p>
+                <p><span id="temp"></span></p>
+                <p><span id="wind"></span></p>
+                <p><span id="humidity"></span></p>
+                <!--<p>UV Index: <span id="uv-index"></span></p>-->
             </div>
 
             <div class="card">
