--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
                     <button id="search-btn" type="submit" class="btn">Search</button>
                 </form>
             </div>
-            <div class="card">
+            <div id="search-history-container" class="card hide">
                 <h3 class="card-headers">Search History:</h3>
                 <div id="search-history"></div>
             </div>
@@ -51,9 +51,11 @@
                 <!--<p>UV Index: <span id="uv-index"></span></p>-->
             </div>
 
-            <div class="card">
-                <h3 class="card-headers">5-Day Forecast:</h3>
-                <div id="five-day"></div>
+            <div class="card hide" id="forecast">
+                <h3 class="card-headers">Tomorrow:</h3>
+                <div id="five-day">
+                    <div id="day1"></div>
+                </div>
             </div>
         </section>
     </main>
