clear icon with each search:

--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             <div class="card hide" id="forecast">
                 <h3 class="card-headers">Tomorrow:</h3>
                 <div id="five-day">
+                    <div id="icon-container"></div>
                     <div id="day1"></div>
                 </div>
             </div>
